# ImageProcess

./: .gitignore  ImageProcess.sln  ImageProcessGenrate.bat  README.md  tatus
CMake/: CMakeLists.txt  ImageCore.cmake
ImageProcess/: ImageOperateSet.cs  ImageProcess.csproj  Mat2D.cs  MemoryOperateSet.cs  PixelMap.cs  Tuple.cs
ImageProcess.Tests/: ImageProcess.Tests.csproj  Test_ImageIO.cs  Test_Images.cs  Test_Mat2D.cs
ImageProcess/Images/: Bmp1bppIndexed.cs  Color.cs  Palette.cs  RLE.cs
ImageProcess/MatOperateSet/: MatAdd.cs  MatMult.cs  MatTrans.cs
ImageProcessWidget/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
include/: CompierDef.h  ErrorDef.h  Image.h  ImageAttrDef.h  ImageGdiPlus.hpp  Mat2D.hpp  MatOperateSet.h
include/MatOperateSet/: Add.hpp  HistogramProcessing.hpp  MatOperateDef.hpp  Mean.hpp  Scala.hpp  Threshold.hpp  Transpose.hpp
scripts/: CmakeBuildCpp.bat
src/: Image.cpp  ImageAttr.cpp
src/UnitsTest/: Cpp_Test_Entry.cpp  Cpp_Test_Head.h  GdiPlus_Test.hpp  Mat2D_Test.hpp  MatOperateSet_Test.hpp  test1.cpp
